--- a/Shower/Info.plist
+++ b/Shower/Info.plist
@@ -5,7 +5,7 @@
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>UIColorName</key>
-		<string>systemGray6</string>
+		<string>CustomSystemGray</string>
 	</dict>
 </dict>
 </plist>
